# LinuxServerMonitor

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  README.md  claude-code.sh
assets/: README.md  cpuinfo  cpuinfo2  test.txt
assets/rpc_demo/: CMakeLists.txt  client.cpp  hello.grpc.pb.cc  hello.pb.h  readme.txt  server.cpp
config/: SERVER_IP.txt
display/: CMakeLists.txt  README.md  display.cpp
display/include/: QCpuInfoModel.hpp  QCpuLoadModel.hpp  QCpuSoftIrqsModel.hpp  QMemInfoModel.hpp  QMonitorBase.hpp  QMonitorMainWidget.hpp  QNetInfoModel.hpp  Worker.hpp
display/src/: QCpuInfoModel.cpp  QCpuLoadModel.cpp  QCpuSoftIrqsModel.cpp  QMemInfoModel.cpp  QMonitorBase.cpp  QMonitorMainWidget.cpp  QNetInfoModel.cpp  Worker.cpp
docker/scripts/: docker_build.sh  docker_exec.sh  docker_rm.sh  docker_rm_container.sh  docker_rm_image.sh  docker_run.sh  monitor_docker_into.sh  monitor_docker_run.sh
docker/tools/apt/: sources.list
docker/tools/install/abseil/: install_abseil.sh
docker/tools/install/gtest/: install_gtest.sh
log_manager/: CMakeLists.txt  README.md  logger.cpp
log_manager/include/: BlockDeque.hpp  Logger.hpp  block_queue.hpp  logger_manager.h
log_manager/src/: Logger.cpp  Logger_manager.cpp
monitor/: CMakeLists.txt  monitor.cpp
monitor/include/: CpuInfoMonitor.hpp  CpuLoadMonitor.hpp  CpuSoftIrqsMonitor.hpp  MemInfoMonitor.hpp  MonitorBase.hpp  NetInfoMonitor.hpp
monitor/src/: CpuInfoMonitor.cpp  CpuLoadMonitor.cpp  CpuSoftIrqsMonitor.cpp  MemInfoMonitor.cpp  NetInfoMonitor.cpp
proto/: CMakeLists.txt  README.md  cpu_info.proto  cpu_load.proto  cpu_softirqs.proto  meminfo.proto  monitor.proto
rpc_demo/: client.cpp  hello.grpc.pb.h  hello.pb.cc  server.cpp
rpc_manager/: README.md
rpc_manager/client/: CMakeLists.txt  client.cpp
rpc_manager/client/include/: RpcClient.hpp  RpcClientManager.hpp
rpc_manager/client/src/: RpcClient.cpp  RpcClientManager.cpp
rpc_manager/server/: CMakeLists.txt  server.cpp
rpc_manager/server/include/: RpcServer.hpp  rpc_server.h
rpc_manager/server/src/: RpcServer.cpp  server.cpp
test/: CMakeLists.txt  README.md  main.cpp
test/include/: test_readfile.hpp
unit_test/: CMakeLists.txt  README.md
unit_test/include/: ClockTest.hpp  ReadFileTest.hpp  RpcClientTest.hpp
unit_test/src/: AllTest.cpp
utils/: CMakeLists.txt  README.md  gen_proto_.py  read_file.cpp  read_file.h
utils/include/: Clock.hpp  ReadFile.hpp  StringUtil.hpp  read_file.h
utils/src/: ReadFile.cpp  StringUtil.cpp
